# twitter-transfer-protocol

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum
src/: main.rs
src/credentials/: README.md  key  secret
ttp/: twitter.go
